# garmin-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-20-garmin-expanded-metrics-plan.md  2026-03-20-garmin-grafana-sync-plan.md  2026-03-20-garmin-kubernetes-cronjob-plan.md
docs/superpowers/specs/: 2026-03-20-garmin-expanded-metrics-design.md  2026-03-20-garmin-grafana-sync-design.md  2026-03-20-garmin-kubernetes-cronjob-design.md
garmin_sync/: __init__.py  config.py  crypto.py  db.py  garmin_client.py  main.py  mappers.py  repositories.py  sync.py  token_store.py
garmin_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k8s/: garmin-sync-cronjob.yaml
sql/: schema.sql
tests/: test_config.py  test_crypto.py  test_garmin_client.py  test_mappers.py  test_packaging.py  test_repositories.py  test_sync.py  test_token_store.py
tests/fixtures/: activity_detail.json  daily_sleep.json  daily_summary.json  training_readiness.json
