[project]
name = "garmin-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "garminconnect",
  "psycopg[binary]",
  "cryptography",
]

[project.scripts]
garmin-sync = "garmin_sync.main:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
